--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,8 @@ pluginManagement {
             name = 'ParchmentMC'
             url = 'https://maven.parchmentmc.org'
         }
+        maven { url "https://maven.architectury.dev/" }
+        maven { url "https://maven.fabricmc.net/" }
     }
 }
 
